--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://127.0.0.1:27017
+MONGO_URI=mongodb+srv://nilzak:GQzGlcImK9Q1pCOg@cluster0.r0wz1hb.mongodb.net/
 
 API_URL=/api
 
