added clean file upload functionnality

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ TIMEZONE=Etc/GMT+1
 PORT=5000
 
 secret=2erBxFyxqVTgn4Kk
+
+
+
+YOU NEED TO CONFIGURE THIS FOR FILE UPLOADS !!!
+BASE_URL=http://localhost:5000/
