added a lot of endpoints

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-MONGO_URI=mongodb://127.0.0.1:27017/
+MONGO_URI=mongodb+srv://nilzak:GQzGlcImK9Q1pCOg@cluster0.r0wz1hb.mongodb.net/
+
+
+
+# mongodb://127.0.0.1:27017/
+# mongodb+srv://nilzak:GQzGlcImK9Q1pCOg@cluster0.r0wz1hb.mongodb.net/
 
 
 API_URL=/api
@@ -11,5 +16,5 @@ secret=2erBxFyxqVTgn4Kk
 
 
 
-YOU NEED TO CONFIGURE THIS FOR FILE UPLOADS !!!
+# YOU NEED TO CONFIGURE THIS FOR FILE UPLOADS !!!
 BASE_URL=http://localhost:5000/
