--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.3.1",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.3.1",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,7 @@
     "node-cron": "^3.0.2",
     "rotating-file-stream": "^3.1.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "xlsx": "^0.18.5"
   }
 }
