added refresh token mechanism

--- a/.env
+++ b/.env
@@ -12,7 +12,8 @@ TIMEZONE=Etc/GMT+1
 
 PORT=5000
 
-secret=2erBxFyxqVTgn4Kk
+ACCESS_SECRET=2erBxFyxqVTgn4Kk
+REFRESH_SECRET = A1b2C3d4E5f6G7h8
 
 
 
