--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ TIMEZONE=Etc/GMT+1
 
 PORT=5000
 
-ACCESS_SECRET=2erBxFyxqVTgn4Kk
-REFRESH_SECRET = A1b2C3d4E5f6G7h8
+ACCESS_TOKEN_SECRET=2erBxFyxqVTgn4Kk
+REFRESH_TOKEN_SECRET = A1b2C3d4E5f6G7h8
 
 
 
